# pygsl_lite

./: .gitignore  MANIFEST.in  README.rst  gsl_packages.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
Include/pygsl_lite/: block_helpers.h  block_helpers_numpy.h  complex_helpers.h  error_helpers.h  errorno.h  function_helpers.h  general_helpers.h  intern.h  profile.h  pygsl.h  pygsl_features.h  pygsl_features_config.h  rng.h  rng_helpers.h  solver.h  string_helpers.h  utils.h
gsl_dist/: array_includes.py  gsl_Extension.py  gsl_Location.py  swig_extension.py
pygsl_lite/: __init__.py  _block.py  _callback.py  _numobj.py  errors.py  gsl_function.py  gslwrap.py  interpolation.py  math.py  odeiv.py  odeiv2.py  spline.py
src/: errortestmodule.c
src/block/: gsl_block.i
src/callback/: chars.c  function_helpers.c  gsl_callback.i  gsl_function_test.i  gsl_odeiv.i  gsl_odeiv2.i  odeiv.ic
src/gslwrap/: gsl_gslwrap.i  gsl_math.i  interpolation.i
src/init/: block_helpers.c  block_helpers_numpy.ic  complex_helpers.c  error_helpers.c  errorno.c  function_helpers.c  general_helpers.c  initmodule.c  inittestmodule.c  profile.c  rng_helpers.c
swig_src/: block_wrap.c  callback_wrap.c  gslwrap.py  gslwrap_wrap.c  odeiv2.py  odeiv2_wrap.c
test/: test_gsl.py  test_init.py  test_ode.py  test_spline.py
typemaps/: file_typemaps.i  gsl_block_special_typemaps.i  gsl_block_typemaps.i  gsl_complex_typemap.i  gsl_error_typemap.i  gsl_function_typemaps.i  gsl_rng_typemaps.i  swig_init_pygsl.h
