[build-system]
    requires = ["setuptools", "setuptools_scm[toml]>=3.4.3", "wheel", "numpy"]
    build-backend = "setuptools.build_meta"


[project]
    name = "pygsl_lite"
    description = "Minimal GNU Scientific Library Interface"
    license = { text = "GPL-3.0-or-later" }
    authors = [{ name = 'Sergei Ossokine' }]
    readme = "README.rst"
    requires-python = ">=3.8"
    dependencies = ["numpy>=1.23.0"]
    # dynamic properties set by tools:
    dynamic = ["version"]
    classifiers = [
		"Development Status :: 4 - Beta",
		"Intended Audience :: Scientists",
		"Natural Language :: English",
		"Programming Language :: Python",
		"Programming Language :: Python :: 3",
		"Programming Language :: Python :: 3.8",
		"Programming Language :: Python :: 3.9",
		"Programming Language :: Python :: 3.10",
	]

[project.urls]
    homepage = "https://github.com/SergeiOssokine/pygsl_lite"


[tool.setuptools_scm]
    write_to = "pygsl_lite/_version.py"
