[build-system]
    requires = [
        "setuptools>=75", # still 3.8 compatible
        "setuptools_scm[toml]>=3.4.3",
        "wheel",
        "numpy",
        "swig",
    ]
    build-backend = "setuptools.build_meta"


[project]
    name            = "pygsl_lite"
    description     = "Minimal GNU Scientific Library Interface"
    license         = { text = "GPL-2.0-or-later" }
    authors         = [{ name = 'Sergei Ossokine' }]
    readme          = "README.rst"
    requires-python = ">=3.8"
    dependencies    = ["numpy>=1.23.0"]
    # dynamic properties set by tools:
    dynamic = ["version"]


[project.urls]
    homepage = "https://github.com/AEI-ACR/pygsl_lite"

[tool.setuptools_scm]
    write_to = "pygsl_lite/_version.py"

[tool.pytest.ini_options]
    minversion = "6.0"
    testpaths  = ["test"]
